# rs-toxcore-c

apps/groupbot/: groupbot.tox
doc/: benchmarking-strategy.md  merkle-tox-capabilities.md  merkle-tox-cas.md  merkle-tox-client.md  merkle-tox-clock.md  merkle-tox-dag.md  merkle-tox-deniability.md  merkle-tox-design-rationale.md  merkle-tox-handshake-ecies.md  merkle-tox-handshake-x3dh.md  merkle-tox-identity.md  merkle-tox-legacy-bridge.md  merkle-tox-persistence.md  merkle-tox-principles.md  merkle-tox-ratchet.md  merkle-tox-reconcile.md  merkle-tox-storage-format.md  merkle-tox-structure.md  merkle-tox-sync.md  merkle-tox-testing.md  merkle-tox-threat-model.md  merkle-tox-transport.md  merkle-tox-wire-format.md  merkle-tox.md  roadmap.md
merkle-tox-client/src/: lib.rs
merkle-tox-client/tests/: client_test.rs
merkle-tox-core/: BUILD.bazel
merkle-tox-core/benches/: core_bench.rs
merkle-tox-core/src/: crypto.rs  dag.rs  identity.rs  lib.rs  node.rs  viz.rs
merkle-tox-core/src/engine/: authoring.rs  conversation.rs  mod.rs
merkle-tox-core/src/engine/handlers/: mod.rs
merkle-tox-core/src/engine/processor/: side_effects.rs  verification.rs
merkle-tox-core/src/engine/session/: active.rs  handshake.rs  mod.rs
merkle-tox-core/src/sync/: mod.rs
merkle-tox-core/src/testing/: identity.rs
merkle-tox-core/tests/: adversarial_clock_test.rs  adversarial_convergence_test.rs  adversarial_identity_test.rs  adversarial_replay_test.rs  adversarial_rotation_test.rs  dispatcher_test.rs  engine_integration_test.rs  engine_permission_test.rs  engine_proptest.rs  history_consistency_test.rs  identity_hierarchy_test.rs  identity_reconstruction_test.rs  identity_test.rs  key_management_test.rs  multi_path_auth_test.rs  permission_test.rs  poll_test.rs  protocol_flows_test.rs  soft_anchor_test.rs  sync_protocol_test.rs  sync_test.rs  tier1_gaps_test.rs  tier2_gaps_test.rs
merkle-tox-fs/src/: lib.rs
tox-proto/src/: constants.rs
tox-sequenced/src/: protocol.rs  session.rs
toxxi/tests/: log_corruption_test.rs  resend_after_reboot_test.rs
